--- a/INICIO.html
+++ b/INICIO.html
@@ -29,14 +29,13 @@
     </nav>
     
     <section>
-          <div class="capa">
             <video muted autoplay loop>
             <source src="fondos/operadorr.mp4" type="video/mp4">
           </video>
         </div>
         <div class="search-bar">
-            <h3>"Encuentra el equipo de seguridad perfecto para tus necesidades: cascos, guantes y más, todo en un solo lugar."</h3>
-            <input list="pageNames" id="pageInput" placeholder="Buscar..." oninput="navigateToPage()">
+            <h3>"Encuentra el equipo de seguridad perfecto para tus necesidades, todo en un solo lugar."</h3>
+            <input list="pageNames" id="pageInput" placeholder="¿Que buscas?" oninput="navigateToPage()">
             <datalist id="pageNames">
                 <option value="Mascarillas"></option>
                 <option value="Guantes"></option>
@@ -69,6 +68,7 @@
                 <!-- Repeat as necessary -->
             </div>
         </div>
+        <div class="capa"></div>
     </section>
     
     <footer>
