--- a/SEÑALAMIENTOS.html
+++ b/SEÑALAMIENTOS.html
@@ -31,13 +31,26 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>PlACA RIGIDA AUTOADHERIBLE</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/1.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>PLACA RÍGIDA AUTOADHERIBLE </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/1.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Placa Rígida Autoadherible Mediana. Leyenda No Usar el Elevador en Caso de Incendio O Temblor.2<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Medidas: <br> 22.8 X 15.2 CM
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -50,13 +63,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑAL PARA ESPACIOS GRANDES</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/2.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>SEÑALES DE RUTA DE EVACUACIÓN</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/2.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Visibilidad de 0 a 30 metros. Señal para espacios grandes. Uso Industrial.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Medidas: <br> 22.8 X 15.2 CM
+                                    <br><br>
+                                    Modelo: <br>7754F
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -69,13 +97,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>PLACA DE ACRILÍCA ÉLITE</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/3.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>PLACA DE ACRÍLICA DE ELITE </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/3.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p> Incluye, taquetes, tornillos, donas separadoras y tiritas autoadheribles. Letrero Que hacer en caso de sismo o incendio. Visibilidad de 0 a 12 MTS.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Color: <br> PLACA BLANCA IMPRESA EN NEGRO VERDE Y ROJO.
+                                    <br><br>
+                                    Medidas: <br> 22.8 X 15.2 CM
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -88,13 +131,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑAL TRIANGULAR PARA PASILLO GRANDE</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/4.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>SEÑAL TRIANGULAR </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/4.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p> Incluye, taquetes, tornillos, donas separadoras y tiritas autoadheribles. Letrero Que hacer en caso de sismo o incendio. Visibilidad de 0 a 12 MTS.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Color: <br> PLACA BLANCA IMPRESA EN NEGRO VERDE Y ROJO.
+                                    <br><br>
+                                    Medidas: <br> 22.8 X 15.2 CM
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -107,13 +165,22 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑAL VINIL ADHERIBLE</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/5.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>SEÑAL VINIL ADHERIBLE </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/5.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>El vinilo adhesivo también conocido como vinilo autoadherible. Su alta maleabilidad permite que sea fácilmente deformado y cortado, permitiendo que pueda usarse como material para construir siluetas, textos y logotipos<p>
+                            </div>     
+                        </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -126,13 +193,22 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑAL VINIL ADHERIBLE LOW TACK</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/6.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>SEÑAL VINILO ADHESIVO</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/6.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>El vinilo autoadhesivo es muy versátil y apropiado para utilizar habitualmente. Se pega en las superficies no porosas con facilidad y hasta se puede eliminar sin problemas cuando la persona así lo desee. <p>
+                                </div> 
+                            </td>    
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -145,13 +221,22 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑALES PARA INTEMPERIE</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/7.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>SEÑALES PARA INTEMPERIE</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/7.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Ideales para negocios, hospitales, oficinas, centros departamentales, empresas, etc.
+                                    <br><br>•	Con placa chica rígida auto adherible de plástico 22.8 x 15.2cm.	<p>
+                            </div></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -164,13 +249,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>CALCOMANIAS PARA IDENTIFICACION DE GESTOS DE BASURA</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/8.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>CALCOMANÍAS PARA IDENTIFICACIÓN DE GESTOS DE BASURA</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/8.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Convierta cualquier bote de basura en contenedor de reciclaje.
+                                    <br><br>
+                                    •	Etiquetas de vinil con dorso adhesivo permanente.
+                                    <br><br>
+                                    •	Resistentes a rayos UV, humedad y químicos por hasta 2 años.
+                                    <br><br>
+                                    •	Use en interiores y exteriores.
+                                    <p>
+                            </div></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -183,13 +283,26 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑAL DE ALUMINIO ADHERIBLE</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/9.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>SEÑAL DE ALUMINIO ADHERIBLE </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/9.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Las señales en aluminio son utilizadas principalmente para indicar áreas, guiar al usuario en el establecimiento.
+                                    
+                                    <br><br>
+                                    Tienen mejor presentación que las señales ordinarias, gracias a su acabado en aluminio.
+                                    
+                                    <p>
+                            </div></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -202,13 +315,22 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>POSTERS DE AVISO EN LAMINA DE ESTIRENO</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/10.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>POSTERS DE AVISO EN LAMINA DE ESTIRENO  </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/10.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Presenta una excelente estabilidad dimensional para termoformado y elaboración de señalamientos, garantía solo por daños visibles de fábrica y/o problemas de impresión.
+                                    <p>
+                            </div></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -221,13 +343,22 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>SEÑALES DE PLASTICO CORRUGADO</h3>
-                        <p></p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/11.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>POSTERS DE AVISO EN LAMINA DE ESTIRENO  </h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="señalamientos/11.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Presenta una excelente estabilidad dimensional para termoformado y elaboración de señalamientos, garantía solo por daños visibles de fábrica y/o problemas de impresión.
+                                    <p>
+                            </div></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
