--- a/Contactanos.html
+++ b/Contactanos.html
@@ -28,7 +28,6 @@
     </nav>
     
     <section>
-        <div class="capa">
             <div class="form-content">
                 <h2>COMUNÍCATE CON NOSOTROS</h2>
                 <form action="https://formsubmit.co/your@email.com" method="POST">
@@ -49,6 +48,7 @@
                 <source src="fondos/madereria.mp4" type="video/mp4">
               </video>
         </div>
+        <div class="capa"></div>
     </section>
     <footer>
         <div class="footer-content">
