--- a/INICIO.html
+++ b/INICIO.html
@@ -35,7 +35,7 @@
         </div>
         <div class="search-bar">
             <h3>"Encuentra el equipo de seguridad perfecto para tus necesidades, todo en un solo lugar."</h3>
-            <input list="pageNames" id="pageInput" placeholder="¿Que buscas?" oninput="navigateToPage()">
+            <input list="pageNames" id="pageInput" placeholder="Selecciona una opción" oninput="navigateToPage()">
             <datalist id="pageNames">
                 <option value="Mascarillas"></option>
                 <option value="Guantes"></option>
