--- a/Contactanos.html
+++ b/Contactanos.html
@@ -30,7 +30,7 @@
     <section>
             <div class="form-content">
                 <h2>COMUNÍCATE CON NOSOTROS</h2>
-                <form action="https://formsubmit.co/your@email.com" method="POST">
+                <form action="https://formsubmit.co/yaelxdgt24@gmail.com" method="POST">
                     <label for="name">Nombre:</label>
                     <input type="text" id="name" name="name" required>
                     <label for="email">Correo electrónico:</label>
