--- a/Contactanos.html
+++ b/Contactanos.html
@@ -30,7 +30,7 @@
     <section>
             <div class="form-content">
                 <h2>COMUNÍCATE CON NOSOTROS</h2>
-                <form action="https://formsubmit.co/yaelxdgt24@gmail.com" method="POST">
+                <form action="https://formsubmit.co/yaelxdgt@gmail.com" method="POST">
                     <label for="name">Nombre:</label>
                     <input type="text" id="name" name="name" required>
                     <label for="email">Correo electrónico:</label>
@@ -41,7 +41,8 @@
                     <input type="text" id="subject" name="subject" maxlength="40" required>
                     <label for="message">Mensaje:</label>
                     <textarea id="message" name="message" cols="30" rows="5"></textarea>
-                    <input class="btn" type="submit" value="Enviar">         
+                    <input class="btn" type="submit" value="Enviar">  
+                    <input class="hidden" type="_next" value="https://velnergroup.github.io/Contactanos.html">  
                 </form>
             </div>
             <video muted autoplay loop>
