--- a/Contactanos.html
+++ b/Contactanos.html
@@ -42,7 +42,7 @@
                     <label for="message">Mensaje:</label>
                     <textarea id="message" name="message" cols="30" rows="5"></textarea>
                     <input class="btn" type="submit" value="Enviar">  
-                    <input class="hidden" type="_next" value="https://velnergroup.github.io/Contactanos.html">  
+                    <input type="hidden" name="_next" value="https://velnergroup.github.io/Contactanos.html">  
                 </form>
             </div>
             <video muted autoplay loop>
