--- a/MASCARILLAS.html
+++ b/MASCARILLAS.html
@@ -66,7 +66,7 @@
                     <table>
                         <tr>
                             <td><div class="product-text">
-                                <h3>MASCARILLA MEDIA CARA</h3>
+                                <h3>MASCARILLA CARA COMPLETA</h3>
                             </div></td>
                             <td><div class="product-i">
                                 <img src="mascarillas/2.png" alt="">
